In metric units gridtitle/-snapping ignores griddivisions #42994

Closed
opened 2014-12-23 13:09:16 +01:00 by Tom Pov · 11 comments

System Information
Win7 x64, GTX580

Blender Version
Broken > 2.72 - 27b58f0

Short description of error
see title

Exact steps for others to reproduce the error
In any scene, with metric units activated, go to orthographic view. Screentitle always shows "Meters" no matter if you zooms in or out.
And grabbing, with snap to grid enabled, snaps to meters no matter what griddivisions is actually shown.

**System Information** Win7 x64, GTX580 **Blender Version** Broken > 2.72 - 27b58f0 **Short description of error** see title **Exact steps for others to reproduce the error** In any scene, with metric units activated, go to orthographic view. Screentitle always shows "Meters" no matter if you zooms in or out. And grabbing, with snap to grid enabled, snaps to meters no matter what griddivisions is actually shown.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @tompov

Added subscriber: @tompov

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2014-12-23 14:28:56 +01:00

Thanks for the report, but as you noted it, title remains to 'meter' - meaning this is expected behavior currently. 'adaptive' units handling only happens in top/front/side ortho views.

So this is more like a feature request. ;)

Thanks for the report, but as you noted it, title remains to 'meter' - meaning this is expected behavior currently. 'adaptive' units handling only happens in top/front/side ortho views. So this is more like a feature request. ;)
Author

Hm, perhaps it's my bad English...

Yes,I mean in orthographic views and here, with snap to grid, please try to move a default cube for example while you see the (10)cm or mm grid and you will see what I mean: It still snaps to meters.
And this weird behaviour doesn't exist until 2.72 - 27b58f0 from Dez 19.

Thanks
Tom

Hm, perhaps it's my bad English... Yes,I mean in orthographic views and here, with snap to grid, please try to move a default cube for example while you see the (10)cm or mm grid and you will see what I mean: It still snaps to meters. And this weird behaviour doesn't exist until 2.72 - 27b58f0 from Dez 19. Thanks Tom

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Oh ok, sorry, see what you mean now, can confirm :/

Oh ok, sorry, see what you mean now, can confirm :/

This issue was referenced by e483a21ce6

This issue was referenced by e483a21ce6af8337d8ba60bf7319b6c1488a1acc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e483a21ce6.

Closed by commit e483a21ce6.
Author

Wow!, that was fast!

Thank you very much !!!

And season's greetings!
Tom

Wow!, that was fast! Thank you very much !!! And season's greetings! Tom
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42994
No description provided.