Fix T42994: Own recent regression in fix for T42945 (rB5cc199e49581), side/front/top ortho views would no more adapt their snapping unit to zoom factor.

This code would need slightly more refactor actually, but this will be for after release!